# find-hub-tracker

./: .env.example  .gitignore  Dockerfile  FULL_SPEC.md  PROMPT.md  README.md  SPEC.md  SPEC_ADDENDUM.md  docker-compose.yml  pyproject.toml
deploy/: find-hub-tracker.service  macbook-server-setup.md  tailscale-setup.md  ultra-cc-setup.md
migrations/: 001_initial.sql
scripts/: authenticate.py  deploy-ultra.sh  export_history.py
src/find_hub_tracker/: __init__.py  battery.py  config.py  db.py  discord.py  google_fmd.py  heartbeat.py  main.py  models.py  poller.py
